# OotHOBot

./: .env.example  .gitignore  README.md  build.py  main.py  online.py  pyproject.toml
cogs/: crafting.py  music.py  roles.py
data/: available_roles.json  excluded_roles.json  reaction_roles.json
oothobot/: main.py
oothobot/cogs/: crafting.py  roles.py  wiki.py
oothobot/data/roles/: reaction.json
oothobot/utils/: keep_alive.py
resource_data/: resource_list.json
src/: main.py
src/cogs/: crafting.py  helper.py  music.py  newbuild.py  newroles.py  nwdb.py  online.py  roles.py  wiki.py
src/data/commands/: admin_commands.json  commands.json
src/data/online/: optouts.json
src/data/resources/: list.json
src/data/roles/: available.json  reaction.json
src/data/settings/: settings.json
src/utils/: ytdl.py
tests/: test_oothobot.py
