[tool.poetry]
name = "oothobot"
version = "0.1.0"
description = ""
authors = [
    "Michael Stokoe <michael@msweb.dev>"
]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
